k8s/dvr/overlays/audiobookshelf/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  template:
    metadata:
      labels:
        app.kubernetes.io/name: audiobookshelf
    spec:
      containers:
        - name: app
          ports:
            - name: http
              containerPort: 80
          volumeMounts:
            - name: config
              mountPath: /config
              subPath: audiobookshelf/config/
            - name: config
              mountPath: /metadata
              subPath: audiobookshelf/metadata/
            - name: downloads
              mountPath: /audiobooks
              subPath: audiobooks
