k8s/dvr/overlays/audiobookshelf/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  ports:
    - name: http
      port: 13378
      protocol: TCP
      targetPort: http
